--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -2,7 +2,8 @@
     <qresource prefix="/org/kde/kirigami/">
         <file alias="icons/application-menu.svg">../3rdparty/breeze-icons/icons/actions/32/application-menu.svg</file>
         <file alias="icons/document-decrypt.svg">../3rdparty/breeze-icons/icons/actions/32/document-decrypt.svg</file>
-        <file alias="icons/folder-sync.svg">../3rdparty/breeze-icons/icons/actions/32/folder-sync.svg</file>
+        <file alias="icons/network-connect.svg">../3rdparty/breeze-icons/icons/actions/22/network-connect.svg</file>
+        <file alias="icons/network-disconnect.svg">../3rdparty/breeze-icons/icons/actions/22/network-disconnect.svg</file>
         <file alias="icons/go-next.svg">../3rdparty/breeze-icons/icons/actions/22/go-next.svg</file>
         <file alias="icons/go-previous.svg">../3rdparty/breeze-icons/icons/actions/22/go-previous.svg</file>
         <file alias="icons/go-up.svg">../3rdparty/breeze-icons/icons/actions/22/go-up.svg</file>
