--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -5,5 +5,6 @@
         <file>qml/TailPoses.qml</file>
         <file>qml/WelcomePage.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file alias="logo.svg">../digitail.svg</file>
     </qresource>
 </RCC>
