Add a new Tail Moves page with a(n initial) Card based layout

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -3,6 +3,7 @@
         <file>main.qml</file>
         <file>qml/ConnectToTail.qml</file>
         <file>qml/TailPoses.qml</file>
+        <file>qml/TailMoves.qml</file>
         <file>qml/WelcomePage.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file alias="logo.svg">../digitail.svg</file>
