--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -3,7 +3,7 @@
         <file>main.qml</file>
         <file>qml/AboutPage.qml</file>
         <file>qml/ConnectToTail.qml</file>
-        <file>qml/TailPoses.qml</file>
+        <file>qml/TailLights.qml</file>
         <file>qml/TailMoves.qml</file>
         <file>qml/WelcomePage.qml</file>
         <file>qtquickcontrols2.conf</file>
