--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>qml/AboutPage.qml</file>
+        <file>qml/BaseMovesPage.qml</file>
         <file>qml/ConnectToTail.qml</file>
         <file>qml/TailLights.qml</file>
         <file>qml/TailMoves.qml</file>
