--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/org/kde/kirigami/">
+        <file alias="icons/dialog-cancel.svg">../3rdparty/breeze-icons/icons/actions/22/dialog-cancel.svg</file>
         <file alias="icons/user.svg">../3rdparty/breeze-icons/icons/actions/22/user.svg</file>
         <file alias="icons/application-menu.svg">../3rdparty/breeze-icons/icons/actions/32/application-menu.svg</file>
         <file alias="icons/document-decrypt.svg">../3rdparty/breeze-icons/icons/actions/32/document-decrypt.svg</file>
