--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -9,6 +9,8 @@
         <file>qml/WelcomePage.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>images/logo.svg</file>
+        <file>images/tail-lights.svg</file>
+        <file>images/tail-moves.svg</file>
         <file>images/bannerimage.png</file>
     </qresource>
 </RCC>
