--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -3,6 +3,8 @@
         <file alias="icons/checkbox-checked.svg">../3rdparty/breeze-icons/icons/emblems/16/installed.svg</file>
         <file alias="icons/checkbox-unchecked.svg">../3rdparty/breeze-icons/icons/emblems/16/noninstalled.svg</file>
         <file alias="icons/dialog-cancel.svg">../3rdparty/breeze-icons/icons/actions/22/dialog-cancel.svg</file>
+        <file alias="icons/help-about.svg">../3rdparty/breeze-icons/icons/actions/22/help-about.svg</file>
+        <file alias="icons/go-home.svg">../3rdparty/breeze-icons/icons/actions/22/go-home.svg</file>
         <file alias="icons/user.svg">../3rdparty/breeze-icons/icons/actions/22/user.svg</file>
         <file alias="icons/application-menu.svg">../3rdparty/breeze-icons/icons/actions/32/application-menu.svg</file>
         <file alias="icons/document-decrypt.svg">../3rdparty/breeze-icons/icons/actions/32/document-decrypt.svg</file>
