--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -6,6 +6,7 @@
         <file alias="icons/help-about.svg">../3rdparty/breeze-icons/icons/actions/22/help-about.svg</file>
         <file alias="icons/go-home.svg">../3rdparty/breeze-icons/icons/actions/22/go-home.svg</file>
         <file alias="icons/user.svg">../3rdparty/breeze-icons/icons/actions/22/user.svg</file>
+        <file alias="icons/randomize.svg">../3rdparty/breeze-icons/icons/actions/22/randomize.svg</file>
         <file alias="icons/application-menu.svg">../3rdparty/breeze-icons/icons/actions/32/application-menu.svg</file>
         <file alias="icons/document-decrypt.svg">../3rdparty/breeze-icons/icons/actions/32/document-decrypt.svg</file>
         <file alias="icons/network-connect.svg">../3rdparty/breeze-icons/icons/actions/22/network-connect.svg</file>
