--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -9,6 +9,7 @@
         <file>qml/TailLights.qml</file>
         <file>qml/TailMoves.qml</file>
         <file>qml/WelcomePage.qml</file>
+        <file>qml/TailBattery.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>images/logo.svg</file>
         <file>images/tail-lights.svg</file>
