Refactor BaseMoves a bit further, it's now an item
This allows us to also use it in e.g. a Sheet (which would be much
more natural for picking a specific command once, rather than
operating as a remote control type thing)

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -2,7 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>qml/AboutPage.qml</file>
-        <file>qml/BaseMovesPage.qml</file>
+        <file>qml/BaseMovesComponent.qml</file>
         <file>qml/ConnectToTail.qml</file>
         <file>qml/IdleModePage.qml</file>
         <file>qml/NotConnectedCard.qml</file>
