--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -19,5 +19,7 @@
         <file alias="icons/view-list-icons.svg">../3rdparty/breeze-icons/icons/actions/32/view-list-icons.svg</file>
         <file alias="icons/applications-graphics.svg">../3rdparty/breeze-icons/icons/categories/32/applications-graphics.svg</file>
         <file alias="icons/settings-configure.svg">../3rdparty/breeze-icons/icons/actions/32/settings-configure.svg</file>
+        <file alias="icons/view-media-playlist.svg">../3rdparty/breeze-icons/icons/actions/22/view-media-playlist.svg</file>
+        <file alias="icons/list-add.svg">../3rdparty/breeze-icons/icons/actions/22/list-add.svg</file>
     </qresource>
 </RCC>
