Add the initial move lists list and move list editor

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -6,6 +6,7 @@
         <file>qml/ConnectToTail.qml</file>
         <file>qml/IdleModePage.qml</file>
         <file>qml/NotConnectedCard.qml</file>
+        <file>qml/MoveListEditor.qml</file>
         <file>qml/MoveLists.qml</file>
         <file>qml/TailLights.qml</file>
         <file>qml/TailMoves.qml</file>
