--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -21,5 +21,8 @@
         <file alias="icons/settings-configure.svg">../3rdparty/breeze-icons/icons/actions/32/settings-configure.svg</file>
         <file alias="icons/view-media-playlist.svg">../3rdparty/breeze-icons/icons/actions/22/view-media-playlist.svg</file>
         <file alias="icons/list-add.svg">../3rdparty/breeze-icons/icons/actions/22/list-add.svg</file>
+        <file alias="icons/list-remove.svg">../3rdparty/breeze-icons/icons/actions/22/list-remove.svg</file>
+        <file alias="icons/document-edit.svg">../3rdparty/breeze-icons/icons/actions/22/document-edit.svg</file>
+        <file alias="icons/accept_time_event.svg">../3rdparty/breeze-icons/icons/actions/22/accept_time_event.svg</file>
     </qresource>
 </RCC>
