--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -19,8 +19,9 @@
         <file>images/tail_moves.svg</file>
         <file>images/banner_image.png</file>
         <file alias="icon-round.png">../data/res/mipmap-xxxhdpi/ic_launcher_round.png</file>
+        <file>qml/NamePicker.qml</file>
     </qresource>
-    <qresource prefix="icons/breeze-internal">
+    <qresource prefix="/icons/breeze-internal">
         <file>../3rdparty/breeze-icons/icons/actions/32/settings-configure.svg</file>
         <file alias="index.theme">icontheme-index.theme</file>
     </qresource>
