Setup splashscreen theme

--- a/data/res/drawable/splashscreen.xml
+++ b/data/res/drawable/splashscreen.xml
@@ -1,3 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
-    android:src="@drawable/ic_launcher" android:gravity="center"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
+  <item android:drawable="@android:color/white"/>
+  <item>
+    <bitmap
+      android:src="@drawable/ic_launcher"
+      android:gravity="center"/>
+  </item>
+</layer-list>
