--- a/data/res/drawable/splashscreen.xml
+++ b/data/res/drawable/splashscreen.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
   <item android:drawable="@android:color/white"/>
-  <item>
-    <bitmap
-      android:src="@drawable/ic_launcher"
-      android:gravity="center"/>
-  </item>
+  <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_digitail"
+        tools:layout_editor_absoluteX="13dp"
+        tools:layout_editor_absoluteY="229dp" />
 </layer-list>
