Oh dear, forgot to actually show the license text...

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
+        <file alias="gplv3-license-text">../LICENSE</file>
         <file>qml/main.qml</file>
         <file>qml/AboutPage.qml</file>
         <file>qml/BaseMovesComponent.qml</file>
