--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -24,5 +24,6 @@
         <file alias="icons/list-remove.svg">../3rdparty/breeze-icons/icons/actions/22/list-remove.svg</file>
         <file alias="icons/document-edit.svg">../3rdparty/breeze-icons/icons/actions/22/document-edit.svg</file>
         <file alias="icons/accept_time_event.svg">../3rdparty/breeze-icons/icons/actions/22/accept_time_event.svg</file>
+        <file alias="icons/autocorrection.svg">../3rdparty/breeze-icons/icons/actions/32/autocorrection.svg</file>
     </qresource>
 </RCC>
