Show popup when command is in action

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -30,6 +30,7 @@
         <file>qml/TimePicker.qml</file>
         <file>qml/FlatButton.qml</file>
         <file>qml/IdlePauseRangePicker.qml</file>
+        <file>qml/ActiveMovePopup.qml</file>
     </qresource>
     <qresource prefix="/icons/breeze-internal">
         <file>../3rdparty/breeze-icons/icons/actions/32/settings-configure.svg</file>
