Add a simple info card component, named InfoCard

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -31,6 +31,7 @@
         <file>qml/FlatButton.qml</file>
         <file>qml/IdlePauseRangePicker.qml</file>
         <file>qml/ActiveMovePopup.qml</file>
+        <file>qml/InfoCard.qml</file>
     </qresource>
     <qresource prefix="/icons/breeze-internal">
         <file>../3rdparty/breeze-icons/icons/actions/32/settings-configure.svg</file>
