Clean up the Settings page layout a bunch
Also introduces a simple card which ensures the various Settings
bits all have a unified look. Simple, but looks quite nice :)

Fixes bug #92

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -33,6 +33,7 @@
         <file>qml/ActiveMovePopup.qml</file>
         <file>qml/InfoCard.qml</file>
         <file>qml/SettingsPage.qml</file>
+        <file>qml/SettingsCard.qml</file>
         <file>qml/DeveloperModePage.qml</file>
         <file>audio/Sparkle-sound-effect.mp3</file>
     </qresource>
