--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -36,5 +36,7 @@
         <file>qml/SettingsCard.qml</file>
         <file>qml/DeveloperModePage.qml</file>
         <file>audio/Sparkle-sound-effect.mp3</file>
+        <file>commands/digitail-builtin.crumpet</file>
+        <file>commands/eargear-base.crumpet</file>
     </qresource>
 </RCC>
