--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -17,9 +17,9 @@
         <file>qml/AlarmList.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>images/logo.svg</file>
-        <file>images/tail.svg</file>
-        <file>images/tail_lights.svg</file>
-        <file>images/tail_moves.svg</file>
+<!--         <file>images/tail.svg</file> -->
+<!--         <file>images/tail_lights.svg</file> -->
+<!--         <file>images/tail_moves.svg</file> -->
         <file>images/banner_image.png</file>
         <file alias="icon-round.png">../data/res/mipmap-xxxhdpi/ic_launcher_round.png</file>
         <file>qml/NamePicker.qml</file>
@@ -38,5 +38,12 @@
         <file>audio/Sparkle-sound-effect.mp3</file>
         <file>commands/digitail-builtin.crumpet</file>
         <file>commands/eargear-base.crumpet</file>
+
+        <file>images/alarm.svg</file>
+        <file>images/casualmode.svg</file>
+        <file>images/glowtip.svg</file>
+        <file>images/listeningmode.svg</file>
+        <file>images/movelist.svg</file>
+        <file>images/moves.svg</file>
     </qresource>
 </RCC>
