--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -17,9 +17,6 @@
         <file>qml/AlarmList.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>images/logo.svg</file>
-<!--         <file>images/tail.svg</file> -->
-<!--         <file>images/tail_lights.svg</file> -->
-<!--         <file>images/tail_moves.svg</file> -->
         <file>images/banner_image.png</file>
         <file alias="icon-round.png">../data/res/mipmap-xxxhdpi/ic_launcher_round.png</file>
         <file>qml/NamePicker.qml</file>
@@ -40,7 +37,6 @@
         <file>audio/Sparkle-sound-effect.mp3</file>
         <file>commands/digitail-builtin.crumpet</file>
         <file>commands/eargear-base.crumpet</file>
-
         <file>images/alarm.svg</file>
         <file>images/crumpet-head.svg</file>
         <file>images/casualmode.svg</file>
@@ -49,5 +45,6 @@
         <file>images/listeningmode.svg</file>
         <file>images/movelist.svg</file>
         <file>images/moves.svg</file>
+        <file>qml/ShakeToWag.qml</file>
     </qresource>
 </RCC>
