--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -9,6 +9,7 @@
         <file alias="actions/22/dialog-close.svg">../3rdparty/breeze-icons/icons/actions/22/dialog-close.svg</file>
         <file alias="actions/22/document-edit.svg">../3rdparty/breeze-icons/icons/actions/22/document-edit.svg</file>
         <file alias="actions/32/document-revert.svg">../3rdparty/breeze-icons/icons/actions/22/document-revert.svg</file>
+        <file alias="actions/22/flashlight-off.svg">../3rdparty/breeze-icons/icons/actions/22/flashlight-off.svg</file>
         <file alias="actions/22/get-hot-new-stuff.svg">../3rdparty/breeze-icons/icons/actions/22/get-hot-new-stuff.svg</file>
         <file alias="actions/22/globe.svg">../3rdparty/breeze-icons/icons/actions/22/globe.svg</file>
         <file alias="actions/22/go-home.svg">../3rdparty/breeze-icons/icons/actions/22/go-home.svg</file>
