--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -38,6 +38,7 @@
         <file>audio/Sparkle-sound-effect.mp3</file>
         <file>commands/digitail-builtin.crumpet</file>
         <file>commands/eargear-base.crumpet</file>
+        <file>commands/eargear2-base.crumpet</file>
         <file>images/alarm.svg</file>
         <file>images/crumpet-head.svg</file>
         <file>images/casualmode.svg</file>
