Add a DisconnectOptions component, implementing SHUTDOWN and NoPhoneMode

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -35,6 +35,7 @@
         <file>qml/DeveloperModePage.qml</file>
         <file>qml/EarPoses.qml</file>
         <file>qml/GearGestures.qml</file>
+        <file>qml/DisconnectOptions.qml</file>
         <file>audio/Sparkle-sound-effect.mp3</file>
         <file>commands/digitail-builtin.crumpet</file>
         <file>commands/eargear-base.crumpet</file>
