Add accordion help to disconnect dlg, and wait-duration picker for NPM

--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -18,6 +18,7 @@
         <file alias="actions/22/go-up.svg">../3rdparty/breeze-icons/icons/actions/22/go-up.svg</file>
         <file alias="actions/22/handle-sort.svg">../3rdparty/breeze-icons/icons/actions/22/handle-sort.svg</file>
         <file alias="actions/22/help-about.svg">../3rdparty/breeze-icons/icons/actions/22/help-about.svg</file>
+        <file alias="actions/22/question.svg">../3rdparty/breeze-icons/icons/actions/22/question.svg</file>
         <file alias="actions/22/list-add.svg">../3rdparty/breeze-icons/icons/actions/22/list-add.svg</file>
         <file alias="actions/22/list-remove.svg">../3rdparty/breeze-icons/icons/actions/22/list-remove.svg</file>
         <file alias="actions/22/mail-sent.svg">../3rdparty/breeze-icons/icons/actions/22/mail-sent.svg</file>
