Initial tilt mode image

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -48,5 +48,6 @@
         <file>images/listeningmode.svg</file>
         <file>images/movelist.svg</file>
         <file>images/moves.svg</file>
+        <file>images/tiltmode.svg</file>
     </qresource>
 </RCC>
