--- a/src/kirigami-icons.qrc
+++ b/src/kirigami-icons.qrc
@@ -27,6 +27,7 @@
         <file alias="actions/22/overflow-menu.svg">../3rdparty/breeze-icons/icons/actions/22/overflow-menu.svg</file>
         <file alias="actions/22/overflow-menu-left.svg">../3rdparty/breeze-icons/icons/actions/22/overflow-menu-left.svg</file>
         <file alias="actions/22/overflow-menu-right.svg">../3rdparty/breeze-icons/icons/actions/22/overflow-menu-right.svg</file>
+        <file alias="actions/16/paint-unknown.svg">../3rdparty/breeze-icons/icons/actions/16/paint-unknown.svg</file>
 <!--         <file alias="actions/22/randomize.svg">../3rdparty/breeze-icons/icons/actions/22/randomize.svg</file> -->
         <file alias="actions/22/user.svg">../3rdparty/breeze-icons/icons/actions/22/user.svg</file>
         <file alias="actions/22/view-left-close.svg">../3rdparty/breeze-icons/icons/actions/22/view-left-close.svg</file>
