--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -37,6 +37,7 @@
         <file>qml/GearGestures.qml</file>
         <file>qml/DisconnectOptions.qml</file>
         <file>qml/TiltSettings.qml</file>
+        <file>qml/ListenSettings.qml</file>
         <file>audio/Sparkle-sound-effect.mp3</file>
         <file>commands/digitail-builtin.crumpet</file>
         <file>commands/mitail-builtin.crumpet</file>
