--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -54,6 +54,7 @@
         <file>images/moves.svg</file>
         <file>images/tiltmode.svg</file>
         <file>images/tail.svg</file>
+        <file>images/taildevice.svg</file>
         <file>images/eargear.svg</file>
         <file>images/flutter.svg</file>
         <file>images/mitailmini.svg</file>
