Initial porting work for Qt6 and Frameworks 6
This is still in-progress, however, the app starts up and most things
seem to basically be working. More to be done, but this wants to not
just live on my computer.

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -38,6 +38,7 @@
         <file>qml/DisconnectOptions.qml</file>
         <file>qml/TiltSettings.qml</file>
         <file>qml/ListenSettings.qml</file>
+        <file>qml/BasicListItem.qml</file>
         <file>audio/Sparkle-sound-effect.mp3</file>
         <file>commands/digitail-builtin.crumpet</file>
         <file>commands/mitail-builtin.crumpet</file>
