--- a/data/res/drawable/splash.xml
+++ b/data/res/drawable/splash.xml
@@ -6,6 +6,6 @@
         </shape>
     </item>
     <item>
-        <bitmap android:src="@drawable/digitail" android:gravity="center" />
+        <bitmap android:src="@drawable/digitail_small" android:gravity="center" />
     </item>
 </layer-list>
