--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -42,7 +42,9 @@
         <file>audio/Sparkle-sound-effect.mp3</file>
         <file>commands/digitail-builtin.crumpet</file>
         <file>commands/mitail-builtin.crumpet</file>
+        <file>commands/mitail-lights-builtin.crumpet</file>
         <file>commands/mitailmini-builtin.crumpet</file>
+        <file>commands/mitailmini-lights-builtin.crumpet</file>
         <file>commands/eargear-base.crumpet</file>
         <file>commands/eargear2-base.crumpet</file>
         <file>images/alarm.svg</file>
